# ft_printf

ft_printf/: CMakeLists.txt  Makefile  author  ft_printf  main_test.c
ft_printf/include/: ft_printf.h
ft_printf/libft/: CMakeLists.txt  Makefile
ft_printf/libft/includes/: get_next_line.h  libft.h
ft_printf/libft/srcs/: ft_atoi.c  ft_bzero.c  ft_cnt_words.c  ft_cntchr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhitespace.c  ft_iterative_power.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_numlen.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+27 more)
ft_printf/src/: float.c  ft_printf.c  main_test.c  manage_buffer.c  manage_csper.c  manage_d.c  manage_o.c  manage_p.c  manage_u.c  manage_x.c  parser.c  utils.c
